fixed the hero overflow bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -301,6 +301,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 #top {
